# chromereleasenotifier

./: Cargo.toml  README.md  chromereleasesnotifierbot.py  prevoutput.out
src/: main.rs
