[package]
name = "chromereleasesnotifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialog = "0.3.0"
error-chain = "0.12.4"
nanohtml2text = "0.1.4"
notify-rust = "4.8.0"
quick-xml = "0.27.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
